CPLP-1965 add checklist worker

--- a/.github/workflows/portal-backend-int-release-image-update.yml
+++ b/.github/workflows/portal-backend-int-release-image-update.yml
@@ -37,6 +37,8 @@ env:
   NOTIFICATION_IMAGE_FULL_NEW: 'notificationservicetag: ${{ inputs.new-image }}'
   PORTALMIGRATIONS_IMAGE_BEGINN: 'portalmigrationstag: '
   PORTALMIGRATIONS_IMAGE_FULL_NEW: 'portalmigrationstag: ${{ inputs.new-image }}'
+  CHECKLIST_IMAGE_BEGINN: 'checklistworkertag: '
+  CHECKLIST_IMAGE_FULL_NEW: 'checklistworkertag: ${{ inputs.new-image }}'
   PROVISIONING_IMAGE_BEGINN: 'provisioningservicetag: '
   PROVISIONING_IMAGE_FULL_NEW: 'provisioningservicetag: ${{ inputs.new-image }}'
   REGISTRATION_IMAGE_BEGINN: 'registrationservicetag: '
@@ -59,6 +61,7 @@ jobs:
       - name: Modify image tag in values-int.yaml
         run: |
           sed -i 's/${{ env.ADMINISTRATION_IMAGE_BEGINN }}.*/${{ env.ADMINISTRATION_IMAGE_FULL_NEW }}/' charts/portal/values-int.yaml
+          sed -i 's/${{ env.CHECKLIST_IMAGE_BEGINN }}.*/${{ env.CHECKLIST_IMAGE_FULL_NEW }}/' charts/portal/values-int.yaml
           sed -i 's/${{ env.PORTALMAINTENANCE_IMAGE_BEGINN }}.*/${{ env.PORTALMAINTENANCE_IMAGE_FULL_NEW }}/' charts/portal/values-int.yaml
           sed -i 's/${{ env.APPMARKETPLACE_IMAGE_BEGINN }}.*/${{ env.APPMARKETPLACE_IMAGE_FULL_NEW }}/' charts/portal/values-int.yaml
           sed -i 's/${{ env.NOTIFICATION_IMAGE_BEGINN }}.*/${{ env.NOTIFICATION_IMAGE_FULL_NEW }}/' charts/portal/values-int.yaml
