--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -57,5 +57,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
+        with:
+          charts_dir: charts/portal
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
