--- a/charts/portal/templates/secret-backend-keycloak.yaml
+++ b/charts/portal/templates/secret-backend-keycloak.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -20,8 +20,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.backend.portalmaintenance.secret.name }}
+  name: {{ .Values.backend.keycloak.secret }}
   namespace: {{ .Release.Namespace }}
 type: Opaque
-data:
-  appsettings.json:  {{ .Values.backend.portalmaintenance.secret.appsettings }}
+stringData:
+  central-db-password: {{ .Values.backend.keycloak.central.dbConnection.password | default ( randAlphaNum 32 | quote ) }}
+  central-client-secret: {{ .Values.backend.keycloak.central.clientSecret | default ( randAlphaNum 32 | quote ) }}
+  shared-client-secret: {{ .Values.backend.keycloak.shared.clientSecret | default ( randAlphaNum 32 | quote ) }}
