--- a/charts/portal/Chart.yaml
+++ b/charts/portal/Chart.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -21,10 +21,10 @@ apiVersion: v2
 name: portal
 description: Helm chart for Catena-X Portal
 type: application
-version: 0.6.0
-appVersion: 0.6.0
+version: 1.0.0
+appVersion: 1.0.0
 dependencies:
   - condition: postgresql.enabled
     name: postgresql
     repository: https://charts.bitnami.com/bitnami
-    version: 11.x.x
+    version: 11.9.13
