--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -23,6 +23,8 @@ metadata:
   name: {{ .Values.backend.appmarketplace.name }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    {{- toYaml .Values.updateStrategy | nindent 4 }}
   selector:
     matchLabels:
       app: {{ .Values.backend.appmarketplace.name }}
@@ -35,18 +37,161 @@ spec:
       - name: {{ .Values.backend.appmarketplace.name }}
         securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
-        image: "{{ .Values.backend.appmarketplace.image.name }}:{{ .Values.backend.appmarketplace.image.tag | default .Chart.AppVersion }}"
+        image: "{{ .Values.backend.appmarketplace.image.name }}:{{ .Values.backend.appmarketplace.image.appmarketplaceservicetag | default .Chart.AppVersion }}"
         imagePullPolicy: "Always"
-        ports:
-        - containerPort: {{ .Values.portContainer }}
         env:
-        - name: "ASPNETCORE_ENVIRONMENT"
-          value: "Kubernetes"
-        volumeMounts:
-        - name: secrets
-          mountPath: /app/secrets
-          readOnly: true
-      volumes:
-      - name: secrets
-        secret:
-          secretName: {{ .Values.backend.appmarketplace.secret.name }}
+        {{- if .Values.postgresql.enabled }}
+        - name: "PORTAL_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.postgresql.auth.existingSecret }}"
+              key: "portal-password"
+        - name: "PROVISIONING_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.postgresql.auth.existingSecret }}"
+              key: "provisioning-password"
+        - name: "CONNECTIONSTRINGS__PORTALDB"
+          value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
+          value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        {{- end }}
+        {{- if not .Values.postgresql.enabled }}
+        - name: "PORTAL_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.externalDatabase.secret }}"
+              key: "portal-password"
+        - name: "PROVISIONING_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.externalDatabase.secret }}"
+              key: "provisioning-password"
+        - name: "CONNECTIONSTRINGS__PORTALDB"
+          value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
+          value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+          {{- end }}
+        - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__Cl2-CX-Portal__0"
+          value: "{{ .Values.backend.appmarketplace.activeAppCompanyAdminRoles.role0 }}"
+        - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__Cl2-CX-Portal__1"
+          value: "{{ .Values.backend.appmarketplace.activeAppCompanyAdminRoles.role1 }}"
+        - name: "APPMARKETPLACE__ACTIVEAPPNOTIFICATIONTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.activeAppNotificationTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__APPIMAGEDOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.appImageDocumentTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__APPIMAGEDOCUMENTTYPEIDS__1"
+          value: "{{ .Values.backend.appmarketplace.appImageDocumentTypeIds.type1 }}"
+        - name: "APPMARKETPLACE__APPOVERVIEWADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.appmarketplace.appOverviewPath }}"
+        - name: "APPMARKETPLACE__APPROVEAPPNOTIFICATIONTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.approveAppNotificationTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__Cl2-CX-Portal__0"
+          value: "{{ .Values.backend.appmarketplace.approveAppUserRoles.role0 }}"
+        - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__Cl2-CX-Portal__1"
+          value: "{{ .Values.backend.appmarketplace.approveAppUserRoles.role1 }}"
+        - name: "APPMARKETPLACE__BASEPORTALADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
+        - name: "APPMARKETPLACE__USERMANAGEMENTADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
+        - name: "APPMARKETPLACE__CATENAADMINROLES__Cl2-CX-Portal__0"
+          value: "{{ .Values.backend.appmarketplace.catenaAdminRoles.role0 }}"
+        - name: "APPMARKETPLACE__CONTENTTYPESETTINGS__0"
+          value: "{{ .Values.backend.appmarketplace.contentTypeSettings.setting0 }}"
+        - name: "APPMARKETPLACE__CONTENTTYPESETTINGS__1"
+          value: "{{ .Values.backend.appmarketplace.contentTypeSettings.setting1 }}"
+        - name: "APPMARKETPLACE__CONTENTTYPESETTINGS__2"
+          value: "{{ .Values.backend.appmarketplace.contentTypeSettings.setting2 }}"
+        - name: "APPMARKETPLACE__DOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.documentTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__DOCUMENTTYPEIDS__1"
+          value: "{{ .Values.backend.appmarketplace.documentTypeIds.type1 }}"
+        - name: "APPMARKETPLACE__DOCUMENTTYPEIDS__2"
+          value: "{{ .Values.backend.appmarketplace.documentTypeIds.type2 }}"
+        - name: "APPMARKETPLACE__DOCUMENTTYPEIDS__3"
+          value: "{{ .Values.backend.appmarketplace.documentTypeIds.type3 }}"
+        - name: "APPMARKETPLACE__DOCUMENTTYPEIDS__4"
+          value: "{{ .Values.backend.appmarketplace.documentTypeIds.type4 }}"
+        - name: "APPMARKETPLACE__DOCUMENTTYPEIDS__5"
+          value: "{{ .Values.backend.appmarketplace.documentTypeIds.type5 }}"
+        - name: "APPMARKETPLACE__ITADMINROLES__Cl2-CX-Portal__0"
+          value: "{{ .Values.backend.appmarketplace.ITAdminRoles.role0 }}"
+        - name: "APPMARKETPLACE__NOTIFICATIONTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.notificationTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__OFFERSTATUSIDS__0"
+          value: "{{ .Values.backend.appmarketplace.offerStatusIds.status0 }}"
+        - name: "APPMARKETPLACE__OFFERSTATUSIDS__1"
+          value: "{{ .Values.backend.appmarketplace.offerStatusIds.status1 }}"
+        - name: "APPMARKETPLACE__SALESMANAGERROLES__Cl2-CX-Portal__0"
+          value: "{{ .Values.backend.appmarketplace.salesManagerRoles.role0 }}"
+        - name: "APPMARKETPLACE__SERVICEACCOUNTROLES__technical_roles_management__0"
+          value: "{{ .Values.backend.appmarketplace.serviceAccountRoles.role0 }}"
+        - name: "APPMARKETPLACE__SERVICEMANAGERROLES__Cl2-CX-Portal__0"
+          value: "{{ .Values.backend.appmarketplace.serviceManagerRoles.role0 }}"
+        - name: "APPMARKETPLACE__SUBMITAPPNOTIFICATIONTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.submitAppNotificationTypeIds.type0 }}"
+        - name: "JWTBEAREROPTIONS__METADATAADDRESS"
+          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
+        - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDAUDIENCE"
+          value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudiencePortal }}"
+        - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
+          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+        - name: "KEYCLOAK__CENTRAL__AUTHREALM"
+          value: "{{ .Values.backend.keycloak.central.authRealm }}"
+        - name: "KEYCLOAK__CENTRAL__CLIENTID"
+          value: "{{ .Values.backend.keycloak.central.clientId }}"
+        - name: "KEYCLOAK__CENTRAL__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.keycloak.secret }}"
+              key: "central-client-secret"
+        - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
+          value: "{{ .Values.centralidpAddress }}"
+        - name: "KEYCLOAK__SHARED__AUTHREALM"
+          value: "{{ .Values.backend.keycloak.shared.authRealm }}"
+        - name: "KEYCLOAK__SHARED__CLIENTID"
+          value: "{{ .Values.backend.keycloak.shared.clientId }}"
+        - name: "KEYCLOAK__SHARED__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.keycloak.secret }}"
+              key: "shared-client-secret"
+        - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
+          value: "{{ .Values.sharedidpAddress }}"
+        - name: "LOGGING__LOGLEVEL__ORG.CATENAX.NG.PORTAL.BACKEND.OFFERS.LIBRARY.SERVICE"
+          value: "{{ .Values.backend.appmarketplace.logging.offersLibrary }}"
+        - name: "MAILINGSERVICE__MAIL__SMTPHOST"
+          value: "{{ .Values.backend.mailing.host }}"
+        - name: "MAILINGSERVICE__MAIL__SMTPPASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.mailing.secret }}"
+              key: "password"
+        - name: "MAILINGSERVICE__MAIL__SMTPPORT"
+          value: "{{ .Values.backend.mailing.port }}"
+        - name: "MAILINGSERVICE__MAIL__SMTPUSER"
+          value: "{{ .Values.backend.mailing.user }}"
+        - name: "PROVISIONING__CENTRALREALM"
+          value: "{{ .Values.backend.provisioning.centralRealm }}"
+        - name: "PROVISIONING__CENTRALREALMID"
+          value: "{{ .Values.backend.provisioning.centralRealmId }}"
+        - name: "SWAGGERENABLED"
+          value: "{{ .Values.backend.appmarketplace.swaggerEnabled }}"
+        ports:
+        - name: http
+          containerPort: {{ .Values.portContainer }}
+          protocol: TCP
+        resources:
+          {{- toYaml .Values.resources | nindent 12 }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
