--- a/charts/portal/templates/deployment-backend-notification.yaml
+++ b/charts/portal/templates/deployment-backend-notification.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021,2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -23,6 +23,8 @@ metadata:
   name: {{ .Values.backend.notification.name }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    {{- toYaml .Values.updateStrategy | nindent 4 }}
   selector:
     matchLabels:
       app: {{ .Values.backend.notification.name }}
@@ -35,18 +37,94 @@ spec:
       - name: {{ .Values.backend.notification.name }}
         securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
-        image: "{{ .Values.backend.notification.image.name }}:{{ .Values.backend.notification.image.tag | default .Chart.AppVersion }}"
+        image: "{{ .Values.backend.notification.image.name }}:{{ .Values.backend.notification.image.notificationservicetag | default .Chart.AppVersion }}"
         imagePullPolicy: "Always"
-        ports:
-        - containerPort: {{ .Values.portContainer }}
         env:
-        - name: "ASPNETCORE_ENVIRONMENT"
-          value: "Kubernetes"
-        volumeMounts:
-        - name: secrets
-          mountPath: /app/secrets
-          readOnly: true
-      volumes:
-      - name: secrets
-        secret:
-          secretName: {{ .Values.backend.notification.secret.name }}
+        {{- if .Values.postgresql.enabled }}
+        - name: "PORTAL_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.postgresql.auth.existingSecret }}"
+              key: "portal-password"
+        - name: "CONNECTIONSTRINGS__PORTALDB"
+          value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "DATABASEACCESS__PORTAL__CONNECTIONSTRING"
+          value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        {{- end }}
+        {{- if not .Values.postgresql.enabled }}
+        - name: "PORTAL_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.externalDatabase.secret }}"
+              key: "portal-password"
+        - name: "PROVISIONING_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.externalDatabase.secret }}"
+              key: "provisioning-password"
+        - name: "CONNECTIONSTRINGS__PORTALDB"
+          value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
+          value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "DATABASEACCESS__PORTAL__CONNECTIONSTRING"
+          value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};;"
+        {{- end }}
+        - name: "DATABASEACCESS__PORTAL__DATABASESCHEMA"
+          value: "{{ .Values.backend.dbConnection.schema }}"
+        - name: "KEYCLOAK_CENTRAL_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.keycloak.secret }}"
+              key: "central-db-password"
+        - name: "DATABASEACCESS__KEYCLOAK__CONNECTIONSTRING"
+          value: "Server={{ .Values.backend.keycloak.central.dbConnection.host }};Database={{ .Values.backend.keycloak.central.dbConnection.database }};Port={{ .Values.backend.keycloak.central.dbConnection.port }};User Id={{ .Values.backend.keycloak.central.dbConnection.user }};Password=$(KEYCLOAK_CENTRAL_PASSWORD);Ssl Mode={{ .Values.backend.keycloak.central.dbConnection.sslMode }};"
+        - name: "DATABASEACCESS__KEYCLOAK__DATABASESCHEMA"
+          value: "{{ .Values.backend.keycloak.central.dbConnection.schema }}"
+        - name: "JWTBEAREROPTIONS__METADATAADDRESS"
+          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
+        - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDAUDIENCE"
+          value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudiencePortal }}"
+        - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
+          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+        - name: "KEYCLOAK__CENTRAL__AUTHREALM"
+          value: "{{ .Values.backend.keycloak.central.authRealm }}"
+        - name: "KEYCLOAK__CENTRAL__CLIENTID"
+          value: "{{ .Values.backend.keycloak.central.clientId }}"
+        - name: "KEYCLOAK__CENTRAL__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.keycloak.secret }}"
+              key: "central-client-secret"
+        - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
+          value: "{{ .Values.centralidpAddress }}"
+        - name: "KEYCLOAK__SHARED__AUTHREALM"
+          value: "{{ .Values.backend.keycloak.shared.authRealm }}"
+        - name: "KEYCLOAK__SHARED__CLIENTID"
+          value: "{{ .Values.backend.keycloak.shared.clientId }}"
+        - name: "KEYCLOAK__SHARED__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.keycloak.secret }}"
+              key: "shared-client-secret"
+        - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
+          value: "{{ .Values.sharedidpAddress }}"
+        - name: "SWAGGERENABLED"
+          value: "{{ .Values.backend.notification.swaggerEnabled }}"
+        ports:
+        - name: http
+          containerPort: {{ .Values.portContainer }}
+          protocol: TCP
+        resources:
+          {{- toYaml .Values.resources | nindent 12 }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
