--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -23,6 +23,8 @@ metadata:
   name: {{ .Values.backend.registration.name }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    {{- toYaml .Values.updateStrategy | nindent 4 }}
   selector:
     matchLabels:
       app: {{ .Values.backend.registration.name }}
@@ -35,18 +37,128 @@ spec:
       - name: {{ .Values.backend.registration.name }}
         securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
-        image: "{{ .Values.backend.registration.image.name }}:{{ .Values.backend.registration.image.tag | default .Chart.AppVersion }}"
+        image: "{{ .Values.backend.registration.image.name }}:{{ .Values.backend.registration.image.registrationservicetag | default .Chart.AppVersion }}"
         imagePullPolicy: "Always"
-        ports:
-        - containerPort: {{ .Values.portContainer }}
         env:
-        - name: "ASPNETCORE_ENVIRONMENT"
-          value: "Kubernetes"
-        volumeMounts:
-        - name: secrets
-          mountPath: /app/secrets
-          readOnly: true
-      volumes:
-      - name: secrets
-        secret:
-          secretName: {{ .Values.backend.registration.secret.name }}
+        {{- if .Values.postgresql.enabled }}
+        - name: "PORTAL_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.postgresql.auth.existingSecret }}"
+              key: "portal-password"
+        - name: "PROVISIONING_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.postgresql.auth.existingSecret }}"
+              key: "provisioning-password"
+        - name: "CONNECTIONSTRINGS__PORTALDB"
+          value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
+          value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "DATABASEACCESS__PORTAL__CONNECTIONSTRING"
+          value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        {{- end }}
+        {{- if not .Values.postgresql.enabled }}
+        - name: "PORTAL_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.externalDatabase.secret }}"
+              key: "portal-password"
+        - name: "PROVISIONING_PASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.externalDatabase.secret }}"
+              key: "provisioning-password"
+        - name: "CONNECTIONSTRINGS__PORTALDB"
+          value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
+          value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+        - name: "DATABASEACCESS__PORTAL__CONNECTIONSTRING"
+          value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};;"
+        {{- end }}
+        - name: "DATABASEACCESS__PORTAL__DATABASESCHEMA"
+          value: "{{ .Values.backend.dbConnection.schema }}"
+        - name: "BPN_ADDRESS"
+          value: "{{ .Values.bpdmPartnersPoolAddress }}"
+        - name: "JWTBEAREROPTIONS__METADATAADDRESS"
+          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
+        - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDAUDIENCE"
+          value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudienceRegistration }}"
+        - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
+          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+        - name: "KEYCLOAK__CENTRAL__AUTHREALM"
+          value: "{{ .Values.backend.keycloak.central.authRealm }}"
+        - name: "KEYCLOAK__CENTRAL__CLIENTID"
+          value: "{{ .Values.backend.keycloak.central.clientId }}"
+        - name: "KEYCLOAK__CENTRAL__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.keycloak.secret }}"
+              key: "central-client-secret"
+        - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
+          value: "{{ .Values.centralidpAddress }}"
+        - name: "KEYCLOAK__SHARED__AUTHREALM"
+          value: "{{ .Values.backend.keycloak.shared.authRealm }}"
+        - name: "KEYCLOAK__SHARED__CLIENTID"
+          value: "{{ .Values.backend.keycloak.shared.clientId }}"
+        - name: "KEYCLOAK__SHARED__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.keycloak.secret }}"
+              key: "shared-client-secret"
+        - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
+          value: "{{ .Values.sharedidpAddress }}"
+        - name: "LOGGING__LOGLEVEL__ORG.CATENAX.NG.PORTAL.BACKEND.REGISTRATION.SERVICE.BPN"
+          value: "{{ .Values.backend.registration.logging.registrationServiceBpn }}"
+        - name: "MAILINGSERVICE__MAIL__SMTPHOST"
+          value: "{{ .Values.backend.mailing.host }}"
+        - name: "MAILINGSERVICE__MAIL__SMTPPASSWORD"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.mailing.secret }}"
+              key: "password"
+        - name: "MAILINGSERVICE__MAIL__SMTPPORT"
+          value: "{{ .Values.backend.mailing.port }}"
+        - name: "MAILINGSERVICE__MAIL__SMTPUSER"
+          value: "{{ .Values.backend.mailing.user }}"
+        - name: "PROVISIONING__CENTRALREALM"
+          value: "{{ .Values.backend.provisioning.centralRealm }}"
+        - name: "PROVISIONING__INVITEDUSERINITIALROLES__Cl1-CX-Registration__0"
+          value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
+        - name: "PROVISIONING__SERVICEACCOUNTCLIENTPREFIX"
+          value: "{{ .Values.backend.provisioning.serviceAccountClientPrefix }}"
+        - name: "REGISTRATION__APPLICATIONSTATUSIDS__0"
+          value: "{{ .Values.backend.registration.applicationStatusIds.status0 }}"
+        - name: "REGISTRATION__APPLICATIONSTATUSIDS__1"
+          value: "{{ .Values.backend.registration.applicationStatusIds.status1 }}"
+        - name: "REGISTRATION__APPLICATIONSTATUSIDS__2"
+          value: "{{ .Values.backend.registration.applicationStatusIds.status2 }}"
+        - name: "REGISTRATION__BASEPORTALADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.registration.portalRegistrationPath }}"
+        - name: "REGISTRATION__DOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.registration.documentTypeIds.type0 }}"
+        - name: "REGISTRATION__DOCUMENTTYPEIDS__1"
+          value: "{{ .Values.backend.registration.documentTypeIds.type1 }}"
+        - name: "REGISTRATION__KEYCLOAKCLIENTID"
+          value: "{{ .Values.backend.registration.keycloakClientId }}"
+        - name: "SWAGGERENABLED"
+          value: "{{ .Values.backend.registration.swaggerEnabled }}"
+        ports:
+        - name: http
+          containerPort: {{ .Values.portContainer }}
+          protocol: TCP
+        resources:
+          {{- toYaml .Values.resources | nindent 12 }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+
