--- a/charts/portal/templates/deployment-frontend-assets.yaml
+++ b/charts/portal/templates/deployment-frontend-assets.yaml
@@ -20,34 +20,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.frontend.registration.name }}
+  name: {{ .Values.frontend.assets.name }}
 spec:
   replicas: {{ .Values.replicaCount }}
   strategy:
     {{- toYaml .Values.updateStrategy | nindent 4 }}
   selector:
     matchLabels:
-      app: {{ .Values.frontend.registration.name }}
+      app: {{ .Values.frontend.assets.name }}
   template:
     metadata:
       labels:
-        app: {{ .Values.frontend.registration.name }}
+        app: {{ .Values.frontend.assets.name }}
     spec:
       containers:
-      - name: {{ .Values.frontend.registration.name }}
+      - name: {{ .Values.frontend.assets.name }}
         securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
-        image: {{ .Values.frontend.registration.image.name }}:{{ .Values.frontend.registration.image.registrationtag | default .Chart.AppVersion }}
+        image: {{ .Values.frontend.assets.image.name }}:{{ .Values.frontend.assets.image.assetstag | default .Chart.AppVersion }}
         imagePullPolicy: "Always"
-        env:
-          - name: PORTAL_FRONTEND_URL
-            value: "{{ .Values.portalAddress }}"
-          - name: PORTAL_ASSETS_URL
-            value: "{{ .Values.portalAddress }}{{ .Values.frontend.assets.path }}"
-          - name: PORTAL_BACKEND_URL
-            value: "{{ .Values.portalBackendAddress }}"
-          - name: CENTRALIDP_URL
-            value: "{{ .Values.centralidpAddress }}{{ .Values.frontend.centralidpAuthPath }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
