--- a/charts/portal/templates/job-backend-provisioning-migrations.yaml
+++ b/charts/portal/templates/job-backend-provisioning-migrations.yaml
@@ -20,44 +20,42 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ .Values.backend.portalmigrations.name }}
+  name: {{ .Values.backend.provisioningmigrations.name }}
   annotations:
-    "batch.kubernetes.io/job-tracking": "true"
+    batch.kubernetes.io/job-tracking: "true"
     "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "-5"
 spec:
   template:
     metadata:
-      name: {{ .Values.backend.portalmigrations.name }}
+      name: {{ .Values.backend.provisioningmigrations.name }}
     spec:
       restartPolicy: Never
       containers:
-      - name: {{ .Values.backend.portalmigrations.name }}
+      - name: {{ .Values.backend.provisioningmigrations.name }}
         securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
-        image: "{{ .Values.backend.portalmigrations.image.name }}:{{ .Values.backend.portalmigrations.image.portalmigrationstag | default .Chart.AppVersion }}"
+        image: "{{ .Values.backend.provisioningmigrations.image.name }}:{{ .Values.backend.provisioningmigrations.image.provisioningmigrationstag | default .Chart.AppVersion }}"
         imagePullPolicy: "Always"
         env:
           {{- if .Values.postgresql.enabled }}
-          - name: "PORTAL_PASSWORD"
+          - name: "PROVISIONING_PASSWORD"
             valueFrom:
               secretKeyRef:
                 name: "{{ .Values.postgresql.auth.existingSecret }}"
-                key: "portal-password"
-          - name: "CONNECTIONSTRINGS__PORTALDB"
-            value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+                key: "provisioning-password"
+          - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
+            value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
           {{- end }}
           {{- if not .Values.postgresql.enabled }}
-          - name: "PORTAL_PASSWORD"
+          - name: "PROVISIONING_PASSWORD"
             valueFrom:
               secretKeyRef:
                 name: "{{ .Values.externalDatabase.secret }}"
-                key: "portal-password"
-          - name: "CONNECTIONSTRINGS__PORTALDB"
-            value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
+                key: "provisioning-password"
+          - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
+            value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
           {{- end }}
-          - name: "SEEDING__TESTDATAENVIRONMENTS__0"
-            value: "{{ .Values.backend.portalmigrations.seeding.testDataEnvironments }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
