--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -20,8 +20,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.backend.appmarketplace.secret.name }}
+  name: {{ .Values.backend.interfaces.secret }}
   namespace: {{ .Release.Namespace }}
 type: Opaque
-data:
-  appsettings.json: {{ .Values.backend.appmarketplace.secret.appsettings }}
+stringData:
+  bpdm-client-secret: {{ .Values.backend.checklistworker.bpdm.clientSecret | default ( randAlphaNum 32 | quote ) }}
+  clearinghouse-client-secret: {{ .Values.backend.checklistworker.clearinghouse.clientSecret | default ( randAlphaNum 32 | quote ) }}
+  custodian-client-secret: {{ .Values.backend.checklistworker.custodian.clientSecret | default ( randAlphaNum 32 | quote ) }}
+  sdfactory-client-secret: {{ .Values.backend.checklistworker.sdfactory.clientSecret | default ( randAlphaNum 32 | quote ) }}
+  daps-client-secret: {{ .Values.backend.administration.daps.clientSecret | default ( randAlphaNum 32 | quote ) }}
