--- a/charts/portal/templates/secret-backend-mailing.yaml
+++ b/charts/portal/templates/secret-backend-mailing.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -20,8 +20,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.backend.portalmigrations.secret.name }}
+  name: {{ .Values.backend.mailing.secret }}
   namespace: {{ .Release.Namespace }}
 type: Opaque
-data:
-  appsettings.json: {{ .Values.backend.portalmigrations.secret.appsettings }}
+stringData:
+  password: {{ .Values.backend.mailing.password | default ( randAlphaNum 32 | quote ) }}
+  provisioning-sharedrealm-password: {{ .Values.backend.provisioning.sharedRealm.smtpServer.password | default ( randAlphaNum 32 | quote ) }}
