--- a/charts/portal/templates/secret-backend-postgres-init.yaml
+++ b/charts/portal/templates/secret-backend-postgres-init.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -20,8 +20,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.backend.notification.secret.name }}
+  name: {{ .Values.postgresql.auth.existingSecret }}
   namespace: {{ .Release.Namespace }}
 type: Opaque
-data:
-  appsettings.json: {{ .Values.backend.notification.secret.appsettings }}
+stringData:
+  postgres-password: {{ .Values.postgresql.auth.password | default ( randAlphaNum 32 | quote ) }}
+  replication-password: {{ .Values.postgresql.auth.replicationPassword | default ( randAlphaNum 32 | quote ) }}
+  portal-password: {{ .Values.postgresql.auth.portalPassword | default ( randAlphaNum 32 | quote ) }}
+  provisioning-password: {{ .Values.postgresql.auth.provisioningPassword | default ( randAlphaNum 32 | quote ) }}
