--- a/charts/portal/templates/service-backend-provisioning.yaml
+++ b/charts/portal/templates/service-backend-provisioning.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -20,11 +20,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.backend.provisioning.name }}
+  name: {{ .Values.backend.provisioning.service.name }}
 spec:
   type: ClusterIP
   ports:
   - port: {{ .Values.portService }}
     targetPort: {{ .Values.portContainer }}
   selector:
-    app: {{ .Values.backend.provisioning.name }}
+    app: {{ .Values.backend.provisioning.service.name }}
