--- a/charts/portal/templates/service-frontend-assets.yaml
+++ b/charts/portal/templates/service-frontend-assets.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2021,2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -18,10 +18,13 @@
 ###############################################################
 
 apiVersion: v1
-kind: Secret
+kind: Service
 metadata:
-  name: {{ .Values.backend.registration.secret.name }}
-  namespace: {{ .Release.Namespace }}
-type: Opaque
-data:
-  appsettings.json: {{ .Values.backend.registration.secret.appsettings }}
+  name: {{ .Values.frontend.assets.name }}
+spec:
+  type: ClusterIP
+  ports:
+  - port: {{ .Values.portService }}
+    targetPort: {{ .Values.portContainer }}
+  selector:
+    app: {{ .Values.frontend.assets.name }}
