--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -82,6 +82,14 @@ spec:
           value: "{{ .Values.backend.appmarketplace.appImageDocumentTypeIds.type0 }}"
         - name: "APPMARKETPLACE__APPIMAGEDOCUMENTTYPEIDS__1"
           value: "{{ .Values.backend.appmarketplace.appImageDocumentTypeIds.type1 }}"
+        - name: "APPMARKETPLACE__APPIMAGEDOCUMENTTYPEIDS__2"
+          value: "{{ .Values.backend.appmarketplace.appImageDocumentTypeIds.type2 }}"
+        - name: "APPMARKETPLACE__APPIMAGEDOCUMENTTYPEIDS__3"
+          value: "{{ .Values.backend.appmarketplace.appImageDocumentTypeIds.type3 }}"
+        - name: "APPMARKETPLACE__APPIMAGEDOCUMENTTYPEIDS__4"
+          value: "{{ .Values.backend.appmarketplace.appImageDocumentTypeIds.type4 }}"
+        - name: "APPMARKETPLACE__APPIMAGEDOCUMENTTYPEIDS__5"
+          value: "{{ .Values.backend.appmarketplace.appImageDocumentTypeIds.type5 }}"
         - name: "APPMARKETPLACE__APPOVERVIEWADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.appmarketplace.appOverviewPath }}"
         - name: "APPMARKETPLACE__APPROVEAPPNOTIFICATIONTYPEIDS__0"
@@ -114,6 +122,26 @@ spec:
           value: "{{ .Values.backend.appmarketplace.documentTypeIds.type4 }}"
         - name: "APPMARKETPLACE__DOCUMENTTYPEIDS__5"
           value: "{{ .Values.backend.appmarketplace.documentTypeIds.type5 }}"
+        - name: "APPMARKETPLACE__DOCUMENTTYPEIDS__6"
+          value: "{{ .Values.backend.appmarketplace.documentTypeIds.type6 }}"
+        - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.deleteDocumentTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__1"
+          value: "{{ .Values.backend.appmarketplace.deleteDocumentTypeIds.type1 }}"
+        - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__2"
+          value: "{{ .Values.backend.appmarketplace.deleteDocumentTypeIds.type2 }}"
+        - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__3"
+          value: "{{ .Values.backend.appmarketplace.deleteDocumentTypeIds.type3 }}"
+        - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__4"
+          value: "{{ .Values.backend.appmarketplace.deleteDocumentTypeIds.type4 }}"
+        - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__5"
+          value: "{{ .Values.backend.appmarketplace.deleteDocumentTypeIds.type5 }}"
+        - name: "APPMARKETPLACE__SUBMITDAPPOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.appmarketplace.submitAppDocumentTypeIds.type0 }}"
+        - name: "APPMARKETPLACE__SUBMITAPPDOCUMENTTYPEIDS__1"
+          value: "{{ .Values.backend.appmarketplace.submitAppDocumentTypeIds.type1 }}"
+        - name: "APPMARKETPLACE__SUBMITAPPDOCUMENTTYPEIDS__2"
+          value: "{{ .Values.backend.appmarketplace.submitAppDocumentTypeIds.type2 }}"
         - name: "APPMARKETPLACE__ITADMINROLES__Cl2-CX-Portal__0"
           value: "{{ .Values.backend.appmarketplace.ITAdminRoles.role0 }}"
         - name: "APPMARKETPLACE__NOTIFICATIONTYPEIDS__0"
