--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -95,17 +95,17 @@ frontend:
     name: "portal"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-frontend"
-      portaltag: 1.0.0
+      portaltag: 1.1.0
   registration:
     name: "registration"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-frontend-registration"
-      registrationtag: 1.0.0
+      registrationtag: 1.1.0
   assets:
     name: "assets"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-assets"
-      assetstag: 1.0.0
+      assetstag: 1.1.0
     path: "/assets"
   centralidpAuthPath: "/auth"
   bpdmPartnersPoolApiPath: "/api"
@@ -217,7 +217,7 @@ backend:
     name: "registration-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_registration-service"
-      registrationservicetag: v1.0.0
+      registrationservicetag: v1.1.0
     logging:
       registrationServiceBpn: "Information"
     portalRegistrationPath: "/registration"
@@ -234,7 +234,7 @@ backend:
     name: "administration-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_administration-service"
-      administrationservicetag: v1.0.0
+      administrationservicetag: v1.1.0
     logging:
       businessLogic: "Information"
       sdfactoryLibrary: "Information"
@@ -270,6 +270,7 @@ backend:
     invitation:
       invitedUserInitialRoles:
         role0: "Company Admin"
+      initialLoginTheme: "catenax-shared"
     registration:
       partnerUserInitialRoles:
         role0: "Company Admin"
@@ -313,13 +314,13 @@ backend:
       name: "provisioning-service"
       image:
         name: "ghcr.io/catenax-ng/tx-portal-backend_provisioning-service"
-        provisioningservicetag: v1.0.0
+        provisioningservicetag: v1.1.0
       swaggerEnabled: false
   appmarketplace:
     name: "marketplace-app-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_marketplace-app-service"
-      appmarketplaceservicetag: v1.0.0
+      appmarketplaceservicetag: v1.1.0
     logging:
       offersLibrary: "Information"
     appOverviewPath: "/appoverview"
@@ -346,6 +347,18 @@ backend:
       type3: "APP_TECHNICAL_INFORMATION"
       type4: "APP_LEADIMAGE"
       type5: "APP_IMAGE"
+      type6: "CONFORMITY_APPROVAL_BUSINESS_APPS"
+    deleteDocumentTypeIds:
+      type0: "APP_CONTRACT"
+      type1: "ADDITIONAL_DETAILS"
+      type2: "APP_TECHNICAL_INFORMATION"
+      type3: "APP_LEADIMAGE"
+      type4: "APP_IMAGE"
+      type5: "CONFORMITY_APPROVAL_BUSINESS_APPS"
+    submitAppDocumentTypeIds:
+      type0: "APP_LEADIMAGE"
+      type1: "APP_IMAGE"
+      type2: "CONFORMITY_APPROVAL_BUSINESS_APPS"
     contentTypeSettings:
       setting0: "application/pdf"
       setting1: "image/jpeg"
@@ -361,6 +374,10 @@ backend:
     appImageDocumentTypeIds:
       type0: "APP_LEADIMAGE"
       type1: "APP_IMAGE"
+      type2: "APP_CONTRACT"
+      type3: "ADDITIONAL_DETAILS"
+      type4: "APP_TECHNICAL_INFORMATION"
+      type5: "CONFORMITY_APPROVAL_BUSINESS_APPS"
     offerStatusIds:
       status0: "IN_REVIEW"
       status1: "ACTIVE"
@@ -376,18 +393,18 @@ backend:
     name: "portal-maintenance"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_maintenance-service"
-      portalmaintenancetag: v1.0.0
+      portalmaintenancetag: v1.1.0
   notification:
     name: "notification-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_notification-service"
-      notificationservicetag: v1.0.0
+      notificationservicetag: v1.1.0
     swaggerEnabled: false
   services:
     name: "services-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_services-service"
-      servicesservicetag: v1.0.0
+      servicesservicetag: v1.1.0
     logging:
       offersLibrary: "Information"
     serviceMarketplacePath: "/servicemarketplace"
@@ -417,12 +434,12 @@ backend:
     name: "provisioning-migrations"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_provisioning-migrations"
-      provisioningmigrationstag: v1.0.0
+      provisioningmigrationstag: v1.1.0
   checklistworker:
     name: "checklist-worker"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_checklist-worker"
-      checklistworkertag: v1.0.0
+      checklistworkertag: v1.1.0
     logging:
       checklistLibrary: "Information"
       bpdmLibrary: "Information"
@@ -443,6 +460,7 @@ backend:
         type2: "WELCOME_SERVICE_PROVIDER"
         type3: "WELCOME_CONNECTOR_REGISTRATION"
         type4: "WELCOME_APP_MARKETPLACE"
+      loginTheme: "catenax-shared-portal"
     bpdm:
       scope: "openid"
       grantType: "client_credentials"
