--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -198,6 +198,8 @@ spec:
           value: "{{ .Values.backend.placeholder }}"
         - name: "Document__EnableSeedEndpoint"
           value: "True"
+        - name: "Document__FRAMEDOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.administration.frameDocumentTypeIds.type0 }}"
         - name: "IDENTITYPROVIDERADMIN__CSVSETTINGS__CHARSET"
           value: "{{ .Values.backend.administration.identityProviderAdmin.csvSettings.charset }}"
         - name: "IDENTITYPROVIDERADMIN__CSVSETTINGS__CONTENTTYPE"
@@ -232,6 +234,8 @@ spec:
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudiencePortal }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
           value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+        - name: "JWTBEAREROPTIONS__REFRESHINTERVAL"
+          value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.refreshInterval }}"
         - name: "KEYCLOAK__CENTRAL__AUTHREALM"
           value: "{{ .Values.backend.keycloak.central.authRealm }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTID"
