--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -86,6 +86,8 @@ spec:
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudienceRegistration }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
           value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+        - name: "JWTBEAREROPTIONS__REFRESHINTERVAL"
+          value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.refreshInterval }}"
         - name: "KEYCLOAK__CENTRAL__AUTHREALM"
           value: "{{ .Values.backend.keycloak.central.authRealm }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTID"
@@ -143,6 +145,8 @@ spec:
           value: "{{ .Values.backend.registration.keycloakClientId }}"
         - name: "SWAGGERENABLED"
           value: "{{ .Values.backend.registration.swaggerEnabled }}"
+        - name: "REGISTRATION__REGISTRATIONDOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.registration.registrationDocumentTypeIds.type0 }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
