--- a/charts/portal/templates/cronjob-backend-checklist.yaml
+++ b/charts/portal/templates/cronjob-backend-checklist.yaml
@@ -211,6 +211,8 @@ spec:
               value: "{{ .Values.backend.mailing.port }}"
             - name: "MAILINGSERVICE__MAIL__SMTPUSER"
               value: "{{ .Values.backend.mailing.user }}"
+            - name: "PROCESSES__LOCKEXPIRYSECONDS"
+              value: "{{ .Values.backend.checklistworker.processes.lockExpirySeconds }}"
             - name: "PROVISIONING__CENTRALIDENTITYPROVIDER__CONFIG__CLIENTID"
               value: "{{ .Values.backend.provisioning.centralIdentityProvider.clientId }}"
             - name: "PROVISIONING__CENTRALREALM"
