--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - 'charts/portal/**'
-    branches: [main, helm-environments]
+    branches: [main, helm-environments, release-candidate]
   pull_request:
     paths:
       - 'charts/portal/**'
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
