--- a/.github/workflows/portal-registration-release-image-update.yml
+++ b/.github/workflows/portal-registration-release-image-update.yml
@@ -17,7 +17,7 @@
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
 
-name: Portal Assets INT Release Auto-image-update
+name: Portal Registration Release Auto-image-update
 
 on:
   workflow_dispatch:
@@ -28,8 +28,8 @@ on:
         default: 'no content'
 
 env:
-  IMAGE_BEGINN: 'assetstag: '
-  IMAGE_FULL_NEW: 'assetstag: ${{ inputs.new-image }}'
+  IMAGE_BEGINN: 'registrationtag: '
+  IMAGE_FULL_NEW: 'registrationtag: ${{ inputs.new-image }}'
 
 jobs:
   update-image-tag:
@@ -41,14 +41,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Modify image tag in values-int.yaml
+      - name: Modify image tag in values.yaml
         run: |
-          sed -i 's/${{ env.IMAGE_BEGINN }}.*/${{ env.IMAGE_FULL_NEW }}/' charts/portal/values-int.yaml
+          sed -i 's/${{ env.IMAGE_BEGINN }}.*/${{ env.IMAGE_FULL_NEW }}/' charts/portal/values.yaml
 
-      - name: Commit and push updated values-int.yaml
+      - name: Commit and push updated values.yaml
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add charts/portal/values-int.yaml
-          git commit -m "Add new images for portal assets int"
+          git add charts/portal/values.yaml
+          git commit -m "Add new images for portal registration"
           bash ./scripts/push.sh
