--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -95,7 +95,7 @@ frontend:
     name: "portal"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-frontend"
-      portaltag: v1.3.0-RC3
+      portaltag: v1.3.0-RC4
   registration:
     name: "registration"
     image:
@@ -218,7 +218,7 @@ backend:
     name: "registration-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_registration-service"
-      registrationservicetag: v1.3.0-RC3
+      registrationservicetag: v1.3.0-RC4
     logging:
       registrationServiceBpn: "Information"
     portalRegistrationPath: "/registration"
@@ -237,7 +237,7 @@ backend:
     name: "administration-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_administration-service"
-      administrationservicetag: v1.3.0-RC3
+      administrationservicetag: v1.3.0-RC4
     logging:
       businessLogic: "Information"
       sdfactoryLibrary: "Information"
@@ -319,13 +319,13 @@ backend:
       name: "provisioning-service"
       image:
         name: "ghcr.io/catenax-ng/tx-portal-backend_provisioning-service"
-        provisioningservicetag: v1.3.0-RC3
+        provisioningservicetag: v1.3.0-RC4
       swaggerEnabled: false
   appmarketplace:
     name: "marketplace-app-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_marketplace-app-service"
-      appmarketplaceservicetag: v1.3.0-RC3
+      appmarketplaceservicetag: v1.3.0-RC4
     logging:
       offersLibrary: "Information"
     appOverviewPath: "/appoverview"
@@ -391,25 +391,25 @@ backend:
     name: "portal-migrations"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_portal-migrations"
-      portalmigrationstag: v1.3.0-RC3
+      portalmigrationstag: v1.3.0-RC4
     seeding:
       testDataEnvironments: ""
   portalmaintenance:
     name: "portal-maintenance"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_maintenance-service"
-      portalmaintenancetag: v1.3.0-RC3
+      portalmaintenancetag: v1.3.0-RC4
   notification:
     name: "notification-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_notification-service"
-      notificationservicetag: v1.3.0-RC3
+      notificationservicetag: v1.3.0-RC4
     swaggerEnabled: false
   services:
     name: "services-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_services-service"
-      servicesservicetag: v1.3.0-RC3
+      servicesservicetag: v1.3.0-RC4
     logging:
       offersLibrary: "Information"
     serviceMarketplacePath: "/servicemarketplace"
@@ -442,16 +442,19 @@ backend:
     offerStatusIds:
       status0: "IN_REVIEW"
       status1: "ACTIVE"
+    deleteDocumentTypeIds:
+      type0: "SERVICE_LEADIMAGE"
+      type1: "ADDITIONAL_DETAILS"
   provisioningmigrations:
     name: "provisioning-migrations"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_provisioning-migrations"
-      provisioningmigrationstag: v1.3.0-RC3
+      provisioningmigrationstag: v1.3.0-RC4
   checklistworker:
     name: "checklist-worker"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_checklist-worker"
-      checklistworkertag: v1.3.0-RC3
+      checklistworkertag: v1.3.0-RC4
     logging:
       checklistLibrary: "Information"
       bpdmLibrary: "Information"
