--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -159,6 +159,10 @@ spec:
           value: "{{ .Values.backend.services.offerStatusIds.status0 }}"
         - name: "SERVICES__OFFERSTATUSIDS__1"
           value: "{{ .Values.backend.services.offerStatusIds.status1 }}"
+        - name: "SERVICES__DELETEDOCUMENTTYPEIDS__0"
+          value: "{{ .Values.backend.services.deleteDocumentTypeIds.type0 }}"
+        - name: "SERVICES__DELETEDOCUMENTTYPEIDS__1"
+          value: "{{ .Values.backend.services.deleteDocumentTypeIds.type1 }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
