--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -23,9 +23,24 @@ metadata:
   name: {{ .Values.backend.interfaces.secret }}
   namespace: {{ .Release.Namespace }}
 type: Opaque
+# use lookup function to check if secret exists
+{{- $secret := (lookup "v1" "Secret" .Release.Namespace .Values.backend.interfaces.secret) }}
+{{ if $secret -}}
+data:
+  # if secret exists, use value provided from values file (to cover update scenario) or existing value from secret
+  # use data map instead of stringData to prevent base64 encoding of already base64-encoded existing value from secret
+  # use index function for secret keys with hyphen otherwise '$secret.data.secretKey' works too
+  bpdm-client-secret: {{ ( .Values.backend.checklistworker.bpdm.clientSecret | b64enc ) | default ( index $secret.data "bpdm-client-secret" ) }}
+  clearinghouse-client-secret: {{ ( .Values.backend.checklistworker.clearinghouse.clientSecret | b64enc ) | default ( index $secret.data "clearinghouse-client-secret" ) }}
+  custodian-client-secret: {{ ( .Values.backend.checklistworker.custodian.clientSecret | b64enc ) | default ( index $secret.data "custodian-client-secret" ) }}
+  sdfactory-client-secret: {{ ( .Values.backend.checklistworker.sdfactory.clientSecret | b64enc ) | default ( index $secret.data "sdfactory-client-secret" ) }}
+  daps-client-secret: {{ ( .Values.backend.administration.daps.clientSecret | b64enc ) | default ( index $secret.data "daps-client-secret" ) }}
+{{ else -}}
 stringData:
+  # if secret doesn't exist, use provided value from values file or generate a random one
   bpdm-client-secret: {{ .Values.backend.checklistworker.bpdm.clientSecret | default ( randAlphaNum 32 | quote ) }}
   clearinghouse-client-secret: {{ .Values.backend.checklistworker.clearinghouse.clientSecret | default ( randAlphaNum 32 | quote ) }}
   custodian-client-secret: {{ .Values.backend.checklistworker.custodian.clientSecret | default ( randAlphaNum 32 | quote ) }}
   sdfactory-client-secret: {{ .Values.backend.checklistworker.sdfactory.clientSecret | default ( randAlphaNum 32 | quote ) }}
   daps-client-secret: {{ .Values.backend.administration.daps.clientSecret | default ( randAlphaNum 32 | quote ) }}
+{{ end }}
