--- a/charts/portal/templates/secret-backend-keycloak.yaml
+++ b/charts/portal/templates/secret-backend-keycloak.yaml
@@ -23,7 +23,20 @@ metadata:
   name: {{ .Values.backend.keycloak.secret }}
   namespace: {{ .Release.Namespace }}
 type: Opaque
+# use lookup function to check if secret exists
+{{- $secret := (lookup "v1" "Secret" .Release.Namespace .Values.backend.keycloak.secret) }}
+{{ if $secret -}}
+data:
+  # if secret exists, use value provided from values file (to cover update scenario) or existing value from secret
+  # use data map instead of stringData to prevent base64 encoding of already base64-encoded existing value from secret
+  # use index function for secret keys with hyphen otherwise '$secret.data.secretKey' works too
+  central-db-password: {{ ( .Values.backend.keycloak.central.dbConnection.password | b64enc ) | default ( index $secret.data "central-db-password" ) }}
+  central-client-secret: {{ ( .Values.backend.keycloak.central.clientSecret | b64enc ) | default ( index $secret.data "central-client-secret" ) }}
+  shared-client-secret: {{ ( .Values.backend.keycloak.shared.clientSecret | b64enc ) | default ( index $secret.data "shared-client-secret" ) }}
+{{ else -}}
 stringData:
+  # if secret doesn't exist, use provided value from values file or generate a random one
   central-db-password: {{ .Values.backend.keycloak.central.dbConnection.password | default ( randAlphaNum 32 | quote ) }}
   central-client-secret: {{ .Values.backend.keycloak.central.clientSecret | default ( randAlphaNum 32 | quote ) }}
   shared-client-secret: {{ .Values.backend.keycloak.shared.clientSecret | default ( randAlphaNum 32 | quote ) }}
+{{ end }}
